# OOP_Lab

./: CMakeLists.txt  README.md  eliminate_unset_bits.cpp  eliminate_unset_bits.hpp  func.cpp  func.hpp  prog.cpp  test.txt  tests.cpp
Lab1/: CMakeLists.txt  README.md  main.cpp
Lab2/: CMakeLists.txt  README.md  main.cpp  seven.cpp  seven.hpp  test.cpp
Lab3/: CMakeLists.txt  README.md  figure.cpp  figure.hpp  main.cpp  tests.cpp
Lab4/: CMakeLists.txt  README.md  array.hpp  figure.hpp  main.cpp  octagon.hpp  square.hpp  tests.cpp  triangle.hpp
Lab5/: CMakeLists.txt  README.md  allocator.hpp  list.hpp  main.cpp  tests.cpp
Lab6/: CMakeLists.txt  NPC.cpp  NPC.hpp  README.md  druid.cpp  druid.hpp  factory.cpp  factory.hpp  main.cpp  npc.txt  observer.cpp  observer.hpp  squirrel.cpp  squirrel.hpp  tests.cpp  werewolf.cpp  werewolf.hpp
Lab7/: CMakeLists.txt  README.md  druid.cpp  druid.hpp  main.cpp  npc.cpp  npc.hpp  squirrel.cpp  squirrel.hpp  tests.cpp  werewolf.cpp  werewolf.hpp
